syntax = "proto3";

import "processor_message.proto";
import "memory_message.proto";
import "storage_message.proto";
import "keyboard_message.proto";
import "screen_message.proto";
import "money_message.proto";
import "google/protobuf/timestamp.proto";
import "operation_system_message.proto";
option go_package = "pb/";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  CPU cpu = 4;
  Memory ram = 5;
  repeated GPU gpus = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    double weight_lb = 11;
  }
  Money price = 12;
  OS    os    = 13;
  uint32 release_year = 14;
  google.protobuf.Timestamp updated_at = 15;
}